Updated gc pages